--- a/Exercicios/desafio2/style.css
+++ b/Exercicios/desafio2/style.css
@@ -1,7 +1,14 @@
 @charset "UTF-8";
 
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Sriracha&display=swap');
 
+:root{
+    --font1: verdana,arial,sans-serif
+    --font2:'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+}
 
 *{
     padding: 0px;
@@ -11,6 +18,7 @@
 html,body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 
@@ -23,7 +31,10 @@ header{
 
 header > h1{
     padding-top: 50px;
+    font-family: --font2;
     text-transform: small-caps;
+    font-size:4em;  
+    font-size: 10vw;
 }
 
 header > p{
@@ -52,6 +63,8 @@ section{
     padding-top: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-size: 3.5vw;
+    font-family: var(--font3);
 }
 
 section.imagem > p{
