--- a/Exercicios/desafio2/style.css
+++ b/Exercicios/desafio2/style.css
@@ -2,7 +2,8 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 
 :root{
     --font1: verdana,arial,sans-serif
@@ -65,6 +66,8 @@ section{
     line-height: 2em;
     font-size: 3.5vw;
     font-family: var(--font3);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
@@ -81,6 +84,17 @@ section.Normal{
 section.imagem{
     background-color: rgb(56, 55, 55);
     color: white;
+}
+
+section#img1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+
+}
+
+section#img2{
+    background-image: url(imagens/background002.jpg);
+    
 }
 
 footer{
