--- a/Exercicios/ex038/mq05/estilos/style.css
+++ b/Exercicios/ex038/mq05/estilos/style.css
@@ -58,5 +58,16 @@ article > p {
 }
 
 i#burguer{
-    background-color:
+    display: block;
+    background-color: rgb(31, 29, 27);
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
+
+i#burguer:hover{
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
